--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,120 +1,115 @@
+:root {
+    --background-blue: #021C41;
+}
+
 body {
-    background-color:#fdf0ec ;
+    background-color: black;
 }
 .firstTitle {
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif ;
-    letter-spacing: 0.05em;
-    font-size: 6.875rem;
+    letter-spacing: 0.1em;
+    font-size: 6em;
+    color: white;
     
 }
-.skill-grid {
-    background-color: #98bec8;
-}
-.projects-grid {
-    background-color: #fdf0ec;
+.skill-grid, .projects-grid, .about-me-grid, .trainingCards  {
+    background-color: #020810;
 }
 .resume-grid {
-    background-color: #3bab87;
+    background-color: #03445E;
 }
-.about-me-grid {
-    background-color:#224a54 ;
+
+.contact {
+ background-color: #03445E;
+}
+@keyframes vertical{
+    0%{
+    opacity: 1;
+    transform: rotateX(90deg);
+    }
+    100%{
+    display: none;
+    opacity: 0;
+    transform: rotateX(90deg);
+    }
+}
+
+.verticalLine{
+    animation-name: vertical;
+    animation-duration: 900ms;
+    animation-fill-mode: forwards;
+    animation-iteration-count:infinite;
 }
 h2 {
-    font-family:  Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif ;
+    font-family: Georgia, 'Times New Roman', Times, serif;
     font-weight: 300;
     letter-spacing: 0.1em;
     font-size: 50px;
+    color: white;
 }
 h3 {
-    font-family:  Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif ;
+    font-family: Georgia, 'Times New Roman', Times, serif;
     font-weight: 300;
     letter-spacing: 0.1em;
     font-size: 30px; 
 }
 h4 {
-    font-family:  Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif ;
+    font-family: Georgia, 'Times New Roman', Times, serif;
     font-weight: 300;
     letter-spacing: 0.1em;
-    font-size: 20px; 
+    font-size: 2.2em; 
+    color: white;
 }
 p,
 a {
     font-family: 'Lora', serif;
+    color: white;
+    font-size: 1.5em;
+}
+li {
+    font-size: 1.2em;
+}
+.mention {
+    font-size: 1em;
+}
+textarea {
+    resize: none;
 }
 i {
-    color: #000000;
-    font-size: 1rem;
+    color: white;
+    font-size: 2em;
 }
 .icon {
     color: #98bec8;
     opacity: 0.7;
 }
 .buttonCv {
-    background-color: #98bec8;
     color: #000000;
 }
-.btn-card {
-    color: #3bab87;
+.btn {
+    color: black;
 }
 .hrTitle {
     margin: 0;
     z-index: 1;
     border: 3px solid #000000;
 }
-/* .paragraph {
-    background-color:#ac817a ;
-} */
-
-.vertical-nav {
-    min-width: 17rem;
-    width: 17rem;
-    height: 100vh;
-    position: fixed;
-    top: 0;
-    left: 0;
-    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.1);
-    transition: all 0.4s;
+.card-title {
+    color: white;
+    font-size: 2em;
 }
-.page-content {
-    width: calc(100% - 17rem);
-    margin-left: 17rem;
-    transition: all 0.4s;
-}
-#sidebar.active {
-    margin-left: -17rem;
+.phone {
+    font-size: 1.2em;
+    color: white
 }
 
-#content.active {
-    width: 100%;
-    margin: 0;
-}
 
-@media (max-width: 768px) {
-    #sidebar {
-    margin-left: -17rem;
-    }
-    #sidebar.active {
-    margin-left: 0;
-    }
-    #content {
-    width: 100%;
-    margin: 0;
-    }
-    #content.active {
-    margin-left: 17rem;
-    width: calc(100% - 17rem);
-    }
-}
 
-.separator {
-    margin: 3rem 0;
-    border-bottom: 1px dashed #fff;
-}
 
 .dot {
     height: 25px;
     width: 25px;
-    background-color: #21866f;
+    background-color: #03445E;
     border-radius: 50%;
     display: inline-block;
     z-index: 100;
@@ -129,36 +124,20 @@ i {
 /*Parallax effect*/
 .parallax {
     /* The image used */
-    background-color: #fefbf5;
-    min-height: 31.25rem; 
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+    background-color: #020810e0;
+    min-height: 31.25em;
 }
 .parallaxResume {
-    background-image: url("../img/Canada2.jpg");
-    min-height: 12.5rem; 
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+    min-height: 12.5em; 
+    background: url("../img/max2.png") fixed center no-repeat;
 }
 .parallaxAbout {
-    background-image: url("../img/Canada3.jpg");
-    min-height: 12.5rem; 
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+    min-height: 12.5em; 
+    background: url("../img/max3.png") fixed center no-repeat;
 }
 .parallaxForm {
-    background-image: url("../img/Canada4.jpg");
-    min-height: 12.5rem; 
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+    min-height: 15em; 
+    background: url("../img/max4.png") fixed center no-repeat ;
 }
 @media only screen and (max-device-width: 1366px) {
     .parallax {
