--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,24 +40,27 @@ body {
     animation-fill-mode: forwards;
     animation-iteration-count:infinite;
 }
+.mail {
+    font-size: 1em;
+}
 h2 {
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-weight: 300;
     letter-spacing: 0.1em;
-    font-size: 50px;
+    font-size: 4em;
     color: white;
 }
 h3 {
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-weight: 300;
     letter-spacing: 0.1em;
-    font-size: 30px; 
+    font-size: 3em; 
 }
 h4 {
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-weight: 300;
     letter-spacing: 0.1em;
-    font-size: 2.2em; 
+    font-size: 2em; 
     color: white;
 }
 p,
@@ -144,3 +147,14 @@ i {
     background-attachment: scroll;
     }
 }
+@media only screen and (max-device-width: 780px) {
+    .firstTitle {
+        letter-spacing: 0.1em;
+    font-size: 3.5em;
+    color: white;
+    }
+    h2 {
+    font-size: 2.5em; 
+    }
+    }
+
