--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -147,14 +147,34 @@ i {
     background-attachment: scroll;
     }
 }
-@media only screen and (max-device-width: 780px) {
+@media only screen and (max-device-width: 900px) {
     .firstTitle {
         letter-spacing: 0.1em;
-    font-size: 3.5em;
+    font-size: 5.2em;
+    color: white;
+    }
+    h2 {
+    font-size: 3.4em; 
+    }
+    }
+@media only screen and (max-device-width: 760px) {
+    .firstTitle {
+        letter-spacing: 0.1em;
+    font-size: 4em;
+    color: white;
+    }
+    h2 {
+    font-size: 3em; 
+    }
+}
+@media only screen and (max-device-width: 500px) {
+    .firstTitle {
+        letter-spacing: 0.1em;
+    font-size: 4em;
     color: white;
     }
     h2 {
     font-size: 2.5em; 
     }
-    }
+}
 
